--- a/menber/view/user-list.html
+++ b/menber/view/user-list.html
@@ -3,9 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <title>会員一覧</title>
+    <!-- 最低限のCSS -->
+    <style>
+        table {
+            width: 25%;
+        }
+        .user {
+            text-align:center;
+        }
+    </style>
 </head>
 <body>
     <h1>会員一覧</h1>
-    <a href="/user/edit/1"><h3>会員1を編集</h3></a>
+    <table border="1">
+        <tr>
+            <th></th>
+            <th>id</th>
+            <th>名前</th>
+        </tr>
+        <!-- 変数「list」の要素数の数だけ回す -->
+        {{range $i, $v := .list}}
+        <tr class="user">
+            <td><a href="/user/edit/{{$i}}">編集</a></td>
+            <td>{{$i}}</td>
+            <td>{{$v}}</td>
+        </tr>
+        {{end}}
+    </table>
 </body>
 </html>
